# lolzteam-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
codegen/: forum_openapi.json  generate.py  market_openapi.json
lolzteam/: __init__.py  __main__.py  _http.py
lolzteam/clients/: forum.py  market.py
lolzteam/models/: forum.py  market.py
lolzteam/sections/: _forum_generated.py  _market_generated.py
tests/: conftest.py  test_async_coverage.py  test_clients.py  test_codegen.py  test_http.py  test_http_extra.py  test_models.py
