[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lolzteam"
version = "0.1.0"
description = "Python API wrapper for lolz.live (Forum) and lzt.market (Market)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "lolzteam", email = "support@lolz.live" }]
keywords = ["lolzteam", "lolz", "lzt", "market", "forum", "api", "wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.9"

# Core deps are intentionally minimal — transports are optional
dependencies = []

[project.optional-dependencies]
sync = ["requests>=2.28"]
async = ["httpx[socks]>=0.24"]
models = ["pydantic>=2.0"]
all = ["requests>=2.28", "httpx[socks]>=0.24", "pydantic>=2.0"]
dev = [
    "requests>=2.28",
    "httpx[socks]>=0.24",
    "pydantic>=2.0",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
]

[project.urls]
Homepage = "https://github.com/lolzteam/lolzteam-py"
Documentation = "https://github.com/lolzteam/lolzteam-py#readme"
Repository = "https://github.com/lolzteam/lolzteam-py"
"Bug Tracker" = "https://github.com/lolzteam/lolzteam-py/issues"

[project.scripts]
lolzteam-codegen = "lolzteam.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lolzteam*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"lolzteam/sections/_forum_generated.py" = ["E701"]
"lolzteam/sections/_market_generated.py" = ["E701"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
